--- a/styles.css
+++ b/styles.css
@@ -38,12 +38,14 @@ h4 {
 .graybackground {
   background: #2f303a;
 }
+.section {
+  padding: 94px; 0;
+}
 /*DIV*/
 .container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  margin-bottom: 94px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -79,9 +81,14 @@ h4 {
 /*Загорловок*/
 .graybackground-page {
   height: 600px;
+  background-image: linear-gradient(to bottom, #c4c4c4, #c4c4c4);
+  background-image:url(./img/jpg/Imghero.jpg);
+  
+  background-position: center;
 }
 .conteiner-zagol {
   width: 696px;
+
   text-align: center;
   padding-top: 200px;
   margin-left: auto;
@@ -158,8 +165,15 @@ h4 {
   display: flex;
   margin-top: 50px;
 }
+
 .comanda-present .com-pres + .com-pres + .com-pres {
   margin-left: 30px;
+}
+
+.com-pres {
+margin-left: 30px;
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
 }
 
 /*секция 5 футер*/
@@ -169,6 +183,8 @@ h4 {
 }
 .conteiner-footer {
   padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 215px;
 }
 .foter-li {
   margin-top: 9px;
@@ -179,29 +195,32 @@ h4 {
 }
 
 /*Портфолио картинки*/
+.item-list {
+  border: 1px EEEEEE, 100 %;
+}
 .feature-list {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 56px;
+  padding-top: 56px;
 }
 
 .feature-list .item-list {
   width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
 }
 .feature-list .item-list:nth-child(3n) {
-  margin-right: 0px;
+  padding-right: 0px;
 }
 .feature-list .item-list:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+  padding-bottom: 0px;
 }
 
 .cont-pictur {
-  margin-top: 20px;
-  margin-right: 24px;
-  margin-bottom: 4px;
-  margin-left: 24px;
+  padding-top: 20px;
+  padding-right: 24px;
+  padding-bottom: 4px;
+  padding-left: 24px;
 }
 .pictures-page {
   font-weight: bold;
@@ -216,9 +235,9 @@ h4 {
   color: #757575;
 }
 .cont-link {
-  margin-right: 24px;
-  margin-bottom: 20px;
-  margin-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 20px;
+  padding-left: 24px;
 }
 
 /* ссилки */
