--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,9 @@ h4 {
 }
 
 /*ХЕДЕР*/
+.line {
+  border: 1px solid #ECECEC;
+}
 .site-nav {
   display: flex;
   margin-left: 91px;
@@ -161,11 +164,15 @@ background-image: linear-gradient(
 }
 .cont-box {
   /* margin-top: 94px;*/
+  padding-top: 94px;
 }
 /*секция 4 команда*/
 
 .comanda {
   /*margin-top: 94px;*/
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background: #F5F4FA;
 }
 .comanda-present {
   display: flex;
@@ -185,24 +192,27 @@ border-radius: 0px 0px 4px 4px;
 /*секция 5 футер*/
 .graybackground {
   height: 252px;
-  margin-top: 78px;
+  /*margin-top: 78px;*/
 }
 .conteiner-footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  padding-left: 215px;
+  
 }
 .foter-li {
   margin-top: 9px;
   margin-bottom: 9px;
 }
 .gray-footer {
-  margin-top: 90px;
+ /* margin-top: 90px;*/
 }
 
 /*Портфолио картинки*/
+.pictures-list{
+  padding-bottom: 94px;
+}
 .item-list {
-  border: 1px EEEEEE, 100 %;
+  outline: 1px solid #EEEEEE;
 }
 .feature-list {
   display: flex;
@@ -212,20 +222,20 @@ border-radius: 0px 0px 4px 4px;
 
 .feature-list .item-list {
   width: 370px;
-  padding-right: 30px;
-  padding-bottom: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
 .feature-list .item-list:nth-child(3n) {
-  padding-right: 0px;
+  margin-right: 0px;
 }
 .feature-list .item-list:nth-last-child(-n + 3) {
-  padding-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .cont-pictur {
   padding-top: 20px;
   padding-right: 24px;
-  padding-bottom: 4px;
+  padding-bottom: 20px;
   padding-left: 24px;
 }
 .pictures-page {
@@ -335,7 +345,7 @@ header {
   font-size: 36px;
   line-height: 42px;
   text-align: center;
-  margin-top: 188px;
+ 
 }
 .presentation-name {
   font-weight: 500;
