--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,32 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
 border-radius: 0px 0px 4px 4px;
 }
 
+.master-social{
+  display: flex;
+  justify-content: center;
+}
+
+.master-social > .mast:not(:last-child) {
+  margin-right: 10px;
+}
+
+.mast{
+ 
+}
+
+.master-icon{
+  width: 20px;
+  height: 20px;
+}
+
+.master-linc {
+  display: flex;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50px;
+}
+
 /*секция 5 футер*/
 .graybackground {
   height: 252px;
