--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@ h4 {
 }
 .site-nav .item {
   margin-right: 50px;
-  padding-top: 21px;
-  padding-bottom: 21px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .site-nav .item:last-child {
@@ -84,7 +84,7 @@ h4 {
 /*Загорловок*/
 .graybackground-page {
   height: 600px;
-background-image: linear-gradient(
+  background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -127,8 +127,9 @@ background-image: linear-gradient(
 .information-menu {
   display: flex;
   width: 1170px;
-  padding-top: 94px;
-  /*margin-top: 94px;*/
+}
+.box-infor {
+   padding-top: 94px;
 }
 
 .information {
@@ -162,9 +163,9 @@ background-image: linear-gradient(
 .present-box .box-item + .box-item {
   margin-left: 50px;
 }
-.cont-box {
-  /* margin-top: 94px;*/
+.box-prez {
   padding-top: 94px;
+  padding-bottom: 94px;
 }
 /*секция 4 команда*/
 
@@ -192,6 +193,9 @@ border-radius: 0px 0px 4px 4px;
 .master-social{
   display: flex;
   justify-content: center;
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-bottom: 30px;
 }
 
 .master-social > .mast:not(:last-child) {
@@ -202,7 +206,8 @@ border-radius: 0px 0px 4px 4px;
 .master-icon{
   width: 20px;
   height: 20px;
-}
+  margin-top: 12px;
+  }
 
 .master-linc {
   display: flex;
@@ -210,32 +215,27 @@ border-radius: 0px 0px 4px 4px;
   width: 44px;
   height: 44px;
   border-radius: 50px;
-
-  background-color: var(--main-background-color);
-  color: var(--main-color);
 }
 
-.master-linc:focus,
-.master-link:hover {
-  color: #2196f3;
+.master-linc:hover,
+.master-link:focus {
+  background: #2196f3;
 }
+
+
 
 /*секция 5 футер*/
 .graybackground {
   height: 252px;
-  /*margin-top: 78px;*/
+  padding-top: 60px;
 }
 .conteiner-footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
+ 
   
 }
 .foter-li {
   margin-top: 9px;
   margin-bottom: 9px;
-}
-.gray-footer {
- /* margin-top: 90px;*/
 }
 
 /*Портфолио картинки*/
@@ -280,6 +280,7 @@ border-radius: 0px 0px 4px 4px;
   font-size: 16px;
   line-height: 30px;
   color: #757575;
+  margin: 0px;
 }
 .cont-link {
   padding-right: 24px;
