--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ h4 {
 
 /*ХЕДЕР*/
 .line {
-  border: 1px solid #ECECEC;
+  border-bottom: 1px solid #ECECEC;
 }
 .site-nav {
   display: flex;
@@ -288,10 +288,16 @@ color: #2196f3;
 .graybackground {
   height: 252px;
   padding-top: 60px;
+  margin-top: 96px;
 }
 .conteiner-footer {
- 
+ display: flex;
   
+}
+.teinerfoot{
+width: 231px;
+height: 81px;
+margin-right: 70px;
 }
 .foter-li {
   margin-top: 9px;
@@ -310,13 +316,37 @@ height: 80px;
 }
 .fotermast{
 display: flex;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50px;
+justify-content: center;
+width: 44px;
+height: 44px;
+border-radius: 50px;
+background: rgba(255, 255, 255, 0.1);
 }
 
+.mylifoot .fotermast:last-child{
+  margin-right: 0px;
+}
+.mylifoot{
+  margin-right: 10px;
+}
 
+.footsvg {
+width: 20px;
+height: 20px;
+margin-top: 12px;
+}
+
+.fotermast:hover,
+.fotermast:focus {
+  background: #2196f3;
+}
+
+.textfoot{
+color: #fff;
+font-size: 14px;
+line-height: 16px;
+
+}
 
 
 
@@ -325,7 +355,7 @@ display: flex;
   padding-bottom: 94px;
 }
 .item-list {
-  outline: 1px solid #EEEEEE;
+ border: 1px solid #EEEEEE;
 }
 .feature-list {
   display: flex;
