--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,17 @@ h4 {
   margin-left: 30px;
 }
 .info :last-child {
-  margin-left: auto;
+  ;
+}
+.inform-cont {
+display: inline-flex;
+justify-content: center;
+align-items: center;
+width: 270px;
+height: 120px;
+background: #F5F4FA;
+
+
 }
 /*секция 3 презентация*/
 
@@ -243,8 +253,6 @@ border-radius: 0px 0px 4px 4px;
 
 /*Дополнительная секция*/
 .myfile{
-width: 1170px;
-height: 377px;
 padding-top: 94px;
 padding-bottom: 94px;
 }
@@ -267,6 +275,8 @@ margin-right: 30px;
   margin-right: 0px;
 }
 .myfilc {
+  width: 172.18px;
+  height: 91.15px;
   border: 1px solid #E5E5E5; 
   border-radius: 0px 0px 4px 4px;
 
@@ -277,7 +287,7 @@ margin-right: 30px;
   font-size: 36px;
   line-height: 42px;
   text-align: center;
- 
+ margin-bottom: 50px;
 }
 
 .myfilcont .myfilc:hover,
