--- a/styles.css
+++ b/styles.css
@@ -233,7 +233,7 @@ border-radius: 0px 0px 4px 4px;
   width: 20px;
   height: 20px;
   margin-top: 12px;
- 
+  fill:  #AFB1B8;
   }
 
 .master-linc {
@@ -244,12 +244,17 @@ border-radius: 0px 0px 4px 4px;
   border-radius: 50px;
 }
 
+.master-icon:hover
+.master-icon:focus {
+  fill: #fff;
+}
+
 
 .master-linc:hover,
 .master-link:focus {
   background: #2196f3;
-}
 
+}
 
 /*Дополнительная секция*/
 .myfile{
@@ -269,18 +274,42 @@ width: 170px;
 height: 90px;
 margin-right: 30px;
 
-
 }
+
+.contmyfi {
+  fill: currentColor;
+}
+
 .myfilcont .myfilc:last-child {
   margin-right: 0px;
 }
-.myfilc {
-  width: 172.18px;
-  height: 91.15px;
-  border: 1px solid #E5E5E5; 
-  border-radius: 0px 0px 4px 4px;
 
+
+.myfilc{
+  width: 170px;
+  height: 90px;
 }
+.contmy {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
+  color:  #AFB1B8; 
+}
+.contmyfi:hover,
+.contmyfi:focus{
+fill: #2196f3;
+}
+
+.contmy:hover,
+.contmy:focus{
+border: solid #2196f3;
+color: #2196f3;
+}
+
 
 .prese {
   font-weight: bold;
