--- a/styles.css
+++ b/styles.css
@@ -244,14 +244,15 @@ border-radius: 0px 0px 4px 4px;
   border-radius: 50px;
 }
 
-.master-icon:hover
+.master-icon:hover,
 .master-icon:focus {
-  fill: #fff
-}
+  fill: #fff;
+ 
+ }
 
 
 .master-linc:hover,
-.master-link:focus {
+.master-linc:focus {
   background: #2196f3;
 
 }
@@ -397,7 +398,7 @@ line-height: 16px;
  border: 1px solid #EEEEEE;
 }
 .item-list:hover,
-.item-list:hover{
+.item-list:focus{
 background: #FFFFFF;
 border: 1px solid #EEEEEE;
 box-sizing: border-box;
@@ -457,8 +458,8 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
 .change-color-mail:hover,
 .change-color-mail:focus,
 .contactable-info:hover,
-.button-less:hover,
-.button-less:focus {
+/*.button-less:hover,
+.button-less:focus*/ {
   color: #2196f3;
 }
 .change-color:hover,
@@ -523,12 +524,26 @@ header {
   font-size: 16px;
   line-height: 26px;
   color: #212121;
+  border: 0px;
   border-radius: 4px;
   padding-top: 6px;
   padding-right: 22px;
   padding-bottom: 6px;
   padding-left: 22px;
 }
+
+.port-but:hover,
+.port-but:focus {
+   background-color: #2196f3;;
+}
+.button-less:hover,
+.button-less:focus {
+  color: #fff;
+  background-color: #2196f3;
+}
+
+
+
 /*инфортмация*/
 
 .presentation {
