--- a/styles.css
+++ b/styles.css
@@ -230,6 +230,7 @@ background: #F5F4FA;
 margin-left: 30px;
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 0px 0px 4px 4px;
+background-color: #fff;
 }
 
 .master-social{
@@ -487,6 +488,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
 }
 .change-color-mail {
   color: #757575;
+  fill:#757575;
   display: flex;
   align-items: center;
 }
@@ -494,6 +496,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
 .change-color-mail:focus,
 .contactable-info:hover {
   color: #2196f3;
+  fill: #2196f3;;
   
 }
 .change-color:hover,
